2.3-M03
-------

Cypher:
o Unfulfillable index hints (e.g. on non-existing indices) will now produce a warning or throw an error as configured
o String prefix searches using LIKE are now solved using index seeks
o Now supports dynamic property lookup (f.e. using n['property'])

2.3-M02
-------

Cypher:
o Removed support for Cypher version 2.0 and 2.1, as announced
o Produces error or warning if a query cannot be solved using the specified planner
o Switched to using a new planner based on Iterative Dynamic Programming (IDP)
o Switched to using Scala 2.11
o Cypher now supports two new operators for string pattern matching: LIKE and ILIKE
o It is now possible to escape '_' and '%' in string literals using backslash (for use with LIKE)
o Specifying a default Cypher planner in the settings now only applies to the default language version / parser

2.3-M01
-------

Cypher:
o Added new warning mechanism. The first supported warning is generated for queries that contain a potentially
  unintended cartesian product
o Cypher may now use full index scans to solve queries containing has(n.prop) if appropriate

2.2.4
-----
o Identifiers are properly exposed in nested foreach clauses

2.2.3
-----
o Returns nice error message when using aggregation inside
  of expressions that loop over collections
o Fixes #4758 - OPTIONAL MATCH when either side is null
o Fixes problem with projection of named paths
o Identifiers in scope of ORDER BY are no longer lost in rewriting

2.2.2
-----
o Fixes problem when using named paths and aggregation
o Fixes #4462 - RULE planner inconsistent in order of path elements
o Fixes problem with COST planner and ()-[*0..0]->() patterns
o Fixes problem when ordering on an aggregation function
o Fixes planning around indexes in COST planner
o Fixes planning of disconnected shortestpath in RULE planner
o Fixes type of varlength identifier to be collection of relationships

2.2.1
-----