@@ -2,6 +2,7 @@
 -------
 
 Cypher:
+o Added reverse function for reversing strings
 o Unfulfillable index hints (e.g. on non-existing indices) will now produce a warning or throw an error as configured
 o String prefix searches using LIKE are now solved using index seeks
 o Now supports dynamic property lookup (f.e. using n['property'])
